k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: go-server
  labels:
    app: go-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
        - name: go-server
          image: higorrsc/fc-hrsc-kubernetes-hello-go:v5.3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 3
            failureThreshold: 1
            initialDelaySeconds: 15
          volumeMounts:
            - name: go-server-config
              mountPath: /go/myFamily
              readOnly: true
      volumes:
        - name: go-server-config
          configMap:
            name: config-family
            items:
              - key: members
                path: family.txt
