k8s/pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: go-server
  labels:
    app: go-server

spec:
  containers:
    - name: go-server
      image: higorrsc/fc-hrsc-kubernetes-hello-go
