k8s/mysql-service-h.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql-h

spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None # This makes the service headless, allowing direct access to the pods
