k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: go-server-service
  labels:
    app: go-server-service

spec:
  type: ClusterIP
  selector:
    app: go-server
  ports:
    - name: go-server-service
      protocol: TCP
      port: 8085 # port on which the service is exposed
      targetPort: 8080 # port on which the container is listening
