k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: go-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-server-service
                port:
                  number: 8080
